@@ -21,8 +21,8 @@ return function(database, dictionaries, metadata)
       is_character = true,
       placed_by = util.process_placed_by(prototype),
       prototype_name = name,
-      recipe_categories_lookup = prototype.crafting_categories,
-      recipe_categories = util.convert_categories(prototype.crafting_categories, "recipe_category"),
+      recipe_categories_lookup = prototype.crafting_categories or {},
+      recipe_categories = util.convert_categories(prototype.crafting_categories or {}, "recipe_category"),
       science_packs = {},
       unlocked_by = {},
     }
@@ -87,8 +87,8 @@ return function(database, dictionaries, metadata)
       ingredient_limit = ingredient_limit,
       placed_by = util.process_placed_by(prototype),
       prototype_name = name,
-      recipe_categories_lookup = prototype.crafting_categories,
-      recipe_categories = util.convert_categories(prototype.crafting_categories, "recipe_category"),
+      recipe_categories_lookup = prototype.crafting_categories or {},
+      recipe_categories = util.convert_categories(prototype.crafting_categories or {}, "recipe_category"),
       rocket_parts_required = prototype.rocket_parts_required,
       science_packs = {},
       size = util.get_size(prototype),
